--- a/SSTDataAccessLibrary/SSTDataAccessLibrary.csproj
+++ b/SSTDataAccessLibrary/SSTDataAccessLibrary.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EmailService\EmailService.csproj" />
+  </ItemGroup>
+
 </Project>
