--- a/SSTWeb/appsettings.json
+++ b/SSTWeb/appsettings.json
@@ -6,8 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailConfiguration": {
+    "From": "******",
+    "SmtpServer": "******",
+    "Port": "******",
+    "Username": "******",
+    "Password": "******"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SSTDB": ""
+    "SSTDB": "******",
+    "SSTWebContextConnection": "******"
   }
 }
