--- a/EmailService/EmailService.csproj
+++ b/EmailService/EmailService.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SSTDataAccessLibrary\SSTDataAccessLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
