added external authentication - google & facebook

--- a/SSTWeb/appsettings.json
+++ b/SSTWeb/appsettings.json
@@ -7,15 +7,25 @@
     }
   },
   "EmailConfiguration": {
-    "From": "******",
-    "SmtpServer": "******",
-    "Port": "******",
-    "Username": "******",
-    "Password": "******"
+    "From": "*****",
+    "SmtpServer": "*****",
+    "Port": 465,
+    "Username": "*****",
+    "Password": "*****"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SSTDB": "******",
-    "SSTWebContextConnection": "******"
+    "SSTDB": "*****",
+    "SSTWebContextConnection": "*****"
+  },
+  "Authentication": {
+    "Facebook": {
+      "AppId": "*****",
+      "AppSecret": "*****"
+    },
+    "Google": {
+      "ClientId": "*****",
+      "ClientSecret": "*****"
+    }
   }
 }
