--- a/SSTWeb/SSTWeb.csproj
+++ b/SSTWeb/SSTWeb.csproj
@@ -5,7 +5,34 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\js\site.js" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap.css.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.js" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.js.map" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
+    <Content Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
+    <Content Remove="wwwroot\lib\bootstrap\LICENSE" />
+    <Content Remove="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.js" />
+    <Content Remove="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
+    <Content Remove="wwwroot\lib\jquery-validation\dist\additional-methods.js" />
+    <Content Remove="wwwroot\lib\jquery-validation\dist\additional-methods.min.js" />
+    <Content Remove="wwwroot\lib\jquery-validation\dist\jquery.validate.js" />
+    <Content Remove="wwwroot\lib\jquery-validation\dist\jquery.validate.min.js" />
+    <Content Remove="wwwroot\lib\jquery-validation\LICENSE.md" />
+    <Content Remove="wwwroot\lib\jquery\dist\jquery.js" />
+    <Content Remove="wwwroot\lib\jquery\dist\jquery.min.js" />
+    <Content Remove="wwwroot\lib\jquery\dist\jquery.min.map" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css.map" />
@@ -31,6 +58,32 @@
     <None Include="wwwroot\lib\jquery\dist\jquery.js" />
     <None Include="wwwroot\lib\jquery\dist\jquery.min.js" />
     <None Include="wwwroot\lib\jquery\dist\jquery.min.map" />
+    <None Include="wwwroot\old\js\site.js" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\css\bootstrap-reboot.css.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\css\bootstrap-reboot.min.css.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\css\bootstrap.css.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\css\bootstrap.min.css.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.bundle.js" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.bundle.js.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.bundle.min.js" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.bundle.min.js.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.js" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.js.map" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.min.js" />
+    <None Include="wwwroot\old\lib\bootstrap\dist\js\bootstrap.min.js.map" />
+    <None Include="wwwroot\old\lib\bootstrap\LICENSE" />
+    <None Include="wwwroot\old\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.js" />
+    <None Include="wwwroot\old\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
+    <None Include="wwwroot\old\lib\jquery-validation\dist\additional-methods.js" />
+    <None Include="wwwroot\old\lib\jquery-validation\dist\additional-methods.min.js" />
+    <None Include="wwwroot\old\lib\jquery-validation\dist\jquery.validate.js" />
+    <None Include="wwwroot\old\lib\jquery-validation\dist\jquery.validate.min.js" />
+    <None Include="wwwroot\old\lib\jquery-validation\LICENSE.md" />
+    <None Include="wwwroot\old\lib\jquery\dist\jquery.js" />
+    <None Include="wwwroot\old\lib\jquery\dist\jquery.min.js" />
+    <None Include="wwwroot\old\lib\jquery\dist\jquery.min.map" />
   </ItemGroup>
 
   <ItemGroup>
